--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -10,4 +10,6 @@ jobs:
         continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --sarif-file-output=snyk.sarif
 
