--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -3,6 +3,12 @@ on: [workflow_dispatch]
 jobs:
   security:
     runs-on: ubuntu-latest
+    permissions:
+      # required for all workflows
+      security-events: write
+      # only required for workflows in private repositories
+      actions: read
+      contents: read
     steps:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
