--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -10,7 +10,7 @@ jobs:
       actions: read
       contents: read
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python-3.7@master
         continue-on-error: true # To make sure that SARIF upload gets called
