--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python-3.7@master
+        uses: snyk/actions/python-3.7@main
         continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
