--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -16,7 +16,9 @@ jobs:
         continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
         with:
-          args: --sarif-file-output=snyk.sarif
+          sarif_file: snyk.sarif
 
 
